--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <!-- Engine Scripts -->
     <script src="./src/Engine//Core/Engine_Core.js"></script>
     <script src="./src/Engine//Core/Engine_VertexBuffer.js"></script>
+    <script src='./src/Engine/Core/Engine_GameLoop.js'></script>
     <script src="./src/Engine/SimpleShader.js"></script>
     <script src="./src/Engine/Transform.js"></script>
     <script src="./src/Engine/Renderable.js"></script>
